Resolve warning by using apache commons-codec